[gd_scene load_steps=9 format=3 uid="uid://dkra1r6kxli03"]

[ext_resource type="Script" path="res://Scripts/Traps/SawBlade.gd" id="1_a4imr"]
[ext_resource type="Texture2D" uid="uid://be6q10d4r50ml" path="res://AnimationSheet/16x16 traps.png" id="1_ln3ce"]

[sub_resource type="CircleShape2D" id="CircleShape2D_olma4"]
radius = 13.0

[sub_resource type="GDScript" id="GDScript_1xdti"]
script/source = "extends CollisionShape2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="Animation" id="Animation_il7v2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gfxij"]
resource_name = "SawBlade"
length = 0.9
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [132, 133, 134, 135, 136, 137, 138, 139, 140]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q723q"]
_data = {
"RESET": SubResource("Animation_il7v2"),
"SawBlade": SubResource("Animation_gfxij")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dfb4u"]
radius = 13.0

[node name="SawBlade" type="StaticBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_a4imr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ln3ce")
hframes = 12
vframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_olma4")
script = SubResource("GDScript_1xdti")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q723q")
}

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8388609
collision_mask = 8388609

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_dfb4u")

[connection signal="child_entered_tree" from="CollisionShape2D" to="CollisionShape2D" method="_on_child_entered_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
